--- a/package.json
+++ b/package.json
@@ -5,16 +5,63 @@
   "repository": "git@github.com:TheoNeUpKid88/nodejs-rest-project.git",
   "author": "Ramon J. Yniguez <jryniguez@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "lint": "tslint --project tsconfig.json",
+    "local": "nodemon index.ts",
+    "test": "nyc mocha --require ts-node/register --timeout 200000 tests/*.spec.ts --exit"
+  },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
+    "@types/chai": "^4.2.13",
+    "@types/compression": "^1.7.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.8",
+    "@types/express-validator": "^3.0.0",
+    "@types/helmet": "^0.0.48",
+    "@types/mocha": "^8.0.3",
+    "@types/node": "^14.11.8",
+    "@types/request": "^2.48.5",
+    "@types/winston": "^2.4.4",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^8.1.3",
+    "request": "^2.88.2",
+    "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "@types/cors": "^2.8.7",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-validator": "^6.6.1",
+    "helmet": "^4.1.1",
+    "nyc": "^15.1.0",
+    "winston": "^3.3.3"
+  },
+  "nyc": {
+    "all": true,
+    "check-coverage": true,
+    "extension": [
+      ".js",
+      ".jsx",
+      ".ts",
+      ".tsx"
+    ],
+    "exclude": [
+      "**/*.spec.ts"
+    ],
+    "include": [
+      "src/**/*.ts"
+    ],
+    "reporter": [
+      "html",
+      "text"
+    ]
   }
 }
