--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,9 @@
       "sourceMap": true,
       "outDir": "dist"
     },
-    "lib": ["es2015"]
+    "lib": ["es6"],
+    "exclude": [
+      "tests",
+      "node_modules"
+    ]
   }
